fix: added box-shadow for carts and correct row-gap for footer

--- a/mkdir-shelter/style.css
+++ b/mkdir-shelter/style.css
@@ -69,6 +69,18 @@ body {
     transform: all 0.5s;
 }
 /*----------------------------------------------*/
+.primary_button {
+    display: inline-block;
+    align-items: center;
+    font-size: 17px;
+    line-height: 1.29; /* 22/17 */
+    letter-spacing: 0.06em;
+    color: #292929;
+    padding:15px 45px;
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+}
+/*----------------------------------------------*/
 .title {
     font-size: 35px;
     line-height: 1.28; /* 45/35 */
@@ -261,6 +273,7 @@ body {
 }
 
 .our-friends_arrow {
+    display: block;
     position:relative;
     align-self: center;
     width: 52px;
@@ -268,7 +281,10 @@ body {
     border: 2px solid #F1CDB3;
     border-radius: 100px;
 }
-
+.our-friends_arrow:hover {
+    background-color: #FDDCC4;
+    transition: all 0.5s;
+}
 .our-friends_button {
  position:absolute;
  top:43%;
@@ -285,18 +301,6 @@ body {
     margin-bottom: 60px;
 }
 
-.primary_button {
-    display: inline-block;
-    align-items: center;
-    font-size: 17px;
-    line-height: 1.29; /* 22/17 */
-    letter-spacing: 0.06em;
-    color: #292929;
-    padding:15px 45px;
-    border: 2px solid #F1CDB3;
-    border-radius: 100px;
-}
-
   .our-friends_cart:hover .primary_button { 
     background-color: #FDDCC4;
     transition: all 0.5s;
@@ -308,13 +312,16 @@ body {
 .our-friends_cart {
     display:flex;
     flex-direction: column;
-    row-gap: 30px;
+    row-gap: 28.1px;
     justify-content: center;
     background: #FAFAFA;
     border-radius: 9px;
     cursor:pointer
 }
-
+.our-friends_cart:hover {
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2), 0 4px 6px rgba(0,0,0,0.2);
+    transition: all 0.5s;
+}
 .our-friends_name {
     text-align: center;
     font-size: 20px;
@@ -392,9 +399,12 @@ body {
 .in-addition__conteiner {
     display:flex;
     justify-content: center;
+    align-items: center;
     column-gap: 30px;
 }
-
+.in-addition_image {
+    margin-top: 1px;
+}
 .in-addition_content {
     align-self: center;
     max-width: 380px;
@@ -435,7 +445,7 @@ body {
 .footer {
     background: url(./pictures/footer-gradient-background.png), radial-gradient(110.67% 538.64% at 5.73% 50%, #513D2F 0%, #1A1A1C 100%), #211F20 no-repeat center center fixed;
     background-size: cover;
-    padding-top: 40px;
+    padding-top: 56px;
 }
 
 .footer__conteiner {
@@ -454,7 +464,12 @@ body {
 .footer-contacts_box {
     display:flex;
     flex-direction: column;
+}
+.first-box{
     row-gap: 40px;
+}
+.second-box {
+    row-gap: 33px;
 }
 
 .footer_content {
@@ -469,6 +484,7 @@ body {
     letter-spacing: 0.06em;
     color: #F1CDB3;
 }
+
 /*--------------------------------------*/
 /*our pets page*/
 /*---------------------------------------*/
@@ -546,6 +562,10 @@ body {
     width: 52px;
     border-radius: 100px;
     border: 2px solid #CDCDCD;
+}
+.button_paginator:hover {
+    background-color: #F1CDB3;
+    transition: all 0.5s;
 }
 
 .our-pets_navigation .button_paginator:nth-child(3) {
